--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,8 @@ env:
   CUSTOM_FEEDS_SH: ${{ github.workspace }}/custom-feeds.sh
   CUSTOM_PACKAGES_SH: ${{ github.workspace }}/custom-packages.sh
   CUSTOM_CONFIG_SH: ${{ github.workspace }}/custom-config.sh
-  FEEDS_CONFIG: ${{ github.workspace }}/${{ inputs.config }}
+  # FEEDS_CONFIG:
+  CONFIG_FILE: ${{ github.workspace }}/${{ inputs.config }}
   TZ: Asia/Shanghai
   DEVICE_NAME: unknown
   FILE_DATE: unknown
@@ -62,19 +63,41 @@ jobs:
       run: |
         # chmod +x custom-*.sh
         # $CUSTOM_FEEDS_SH
-        $BUILD_ROOT/scripts/feeds update -a && $BUILD_ROOT/scripts/feeds install -a
+        cd openwrt
+        # [ -e $FEEDS_CONFIG ] && mv $FEEDS_CONFIG feeds.conf.default
+        ./scripts/feeds update -a && ./scripts/feeds install -a
         # $CUSTOM_PACKAGES_SH
         # $CUSTOM_CONFIG_SH
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE .config
 
-    - name: 1.2 Build the firmware image
+    - name: 1.2 Download package
+      id: package
+      run: |
+        cd openwrt
+        make defconfig
+        make download -j$(nproc)
+        find dl -size -1024c -exec ls -l {} \;
+        find dl -size -1024c -exec rm -f {} \;
+
+    - name: 1.3 Compile the firmware
       id: compile
       run: |
-        cd $BUILD_ROOT && echo "$(($(nproc)+1)) thread compile"
-        IGNORE_ERRORS=m make -j$(($(nproc)+1)) defconfig download clean world || IGNORE_ERRORS=m make -j1 defconfig download clean world V=s
+        cd openwrt && echo -e "$(nproc) thread compile"
+        make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
-        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
+        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+
+    # - name: 1.2 Build the firmware image
+    #   id: compile
+    #   run: |
+    #     cd openwrt && echo "$(($(nproc)+1)) thread compile"
+    #     IGNORE_ERRORS=m make -j$(($(nproc)+1)) defconfig download clean world || IGNORE_ERRORS=m make -j1 defconfig download clean world V=s
+    #     echo "status=success" >> $GITHUB_OUTPUT
+    #     grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
+    #     [ -s DEVICE_NAME ] && echo "DEVICE_NAME=$(cat DEVICE_NAME)" >> $GITHUB_ENV
+    #     echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name: 2.1 Check space usage
       run: df -hT
@@ -84,13 +107,13 @@ jobs:
       if: steps.compile.outputs.status == 'success'
       with:
         name: OpenWrt_bin_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}
-        path: ${{ env.BUILD_ROOT }}/bin
+        path: ${{ github.workspace }}/openwrt/bin
 
     - name: 2.3 Organize files
       id: organize
       run: |
-        cd $BUILD_ROOT/bin/targets/*/* && rm -rf packages
-        { echo '### SHA256SUMS'; echo '```txt'; cat sha256sums; echo '```'; } > $BUILD_ROOT/SHA256SUMS
+        cd openwrt/bin/targets/*/* && rm -rf packages
+        { echo '### SHA256SUMS'; echo '```txt'; cat sha256sums; echo '```'; } > openwrt/SHA256SUMS
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
