--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,46 +29,51 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    # runs-on: ubuntu-24.04
+    runs-on: ubuntu-20.04
 
     steps:
     - name: 0.1 Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo apt-get -qq update && sudo apt-get -qq upgrade
-        sudo apt-get -qq install $(cat $DEPENDENCIES)
+        # sudo apt-get -qq install $(cat $DEPENDENCIES)
         sudo apt-get -qq autoremove --purge
         sudo apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
+        sudo mkdir -p /workdir
+        sudo chown $USER:$GROUPS /workdir
 
-    - name: 0.2 Maximize build disk space
-      uses: easimon/maximize-build-space@master
-      with:
-        remove-dotnet: true
-        remove-android: true
-        remove-haskell: true
-        remove-codeql: true
-        remove-docker-images: true
+    # - name: 0.2 Maximize build disk space
+    #   uses: easimon/maximize-build-space@master
+    #   with:
+    #     remove-dotnet: true
+    #     remove-android: true
+    #     remove-haskell: true
+    #     remove-codeql: true
+    #     remove-docker-images: true
 
     - name: 0.3 Checkout
       uses: actions/checkout@main
 
     - name: 0.4 Clone OpenWRT source code
+      working-directory: /workdir
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
+        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: 1.1 Prepare feeds
       run: |
-        # chmod +x custom-*.sh
-        # $CUSTOM_FEEDS_SH
+        chmod +x custom_*.sh
+        $GITHUB_WORKSPACE/custom_feeds.sh
         cd openwrt
         # [ -e $FEEDS_CONFIG ] && mv $FEEDS_CONFIG feeds.conf.default
         ./scripts/feeds update -a && ./scripts/feeds install -a
-        # $CUSTOM_PACKAGES_SH
-        # $CUSTOM_CONFIG_SH
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE .config
+        $GITHUB_WORKSPACE/custom_config.sh
 
     - name: 1.2 Download package
       id: package
@@ -100,6 +105,7 @@ jobs:
     #     echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name: 2.1 Check space usage
+      if: (!cancelled())
       run: df -hT
 
     - name: 2.2 Upload bin directory
