--- a/.github/workflows/rax3000m.yml
+++ b/.github/workflows/rax3000m.yml
@@ -19,4 +19,4 @@ jobs:
     with:
       repo: https://github.com/hanwckf/immortalwrt-mt798x
       branch: openwrt-21.02
-      config: RAX3000M/mt7981-ax3000.config
+      config: RAX3000M/my.config
