--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,18 @@ name: Build OpenWrt
 
 on:
   workflow_dispatch:
+    inputs:
+      repo:
+        required: true
+        default: https://github.com/immortalwrt/immortalwrt
+        type: string
+      branch:
+        required: true
+        default: openwrt-24.10
+        type: string
+      config:
+        required: true
+        type: string
   workflow_call:
     inputs:
       repo:
