--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,7 @@ env:
 
 jobs:
   build:
-    # runs-on: ubuntu-24.04
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: 0.1 Checkout
